force-app/main/default/objects/Brand__c/Brand__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazena as Marcas cadastradas no processo da Infracommerce.</description>
    <label>Marca</label>
    <nameField>
        <label>Nome da Marca</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marcas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>