force-app/main/default/objects/Brand__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Determina se o registro está ativo ou não.</description>
    <label>Ativo ?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Ativo</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <label>Inativo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>