force-app/main/default/objects/Brand__c/fields/BusinessHours__c.field-meta.xml
<CustomField>
    <fullName>BusinessHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Horário comercial da equipe de atendimento responsável por essa marca.</description>
    <inlineHelpText>Informar o horário comercial da equipe de atendimento responsável por essa marca.</inlineHelpText>
    <label>Horário Comercial</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>BusinessHoursBrand</relationshipName>
    <type>Lookup</type>
</CustomField>