force-app/main/default/objects/Brand__c/fields/BusinessName__c.field-meta.xml
<CustomField>
    <fullName>BusinessName__c</fullName>
    <description>Nome Comercial da Marca que será usado nos templates de e-mails por exemplo.</description>
    <inlineHelpText>Insira o nome Comercial que será utilizado em templates de e-mail, contato com o consumidor e relatórios.</inlineHelpText>
    <label>Nome Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>