force-app/main/default/objects/Brand__c/fields/EmailToCase__c.field-meta.xml
<CustomField>
    <fullName>EmailToCase__c</fullName>
    <inlineHelpText>Código utilizado para identificar a marca na criação do Caso via e-mail. Utilizado pela equipe de TI.
Tem que ser o mesmo nome cadastrado no campo Origem do Caso do Objeto Caso.</inlineHelpText>
    <label>Configuração Email-to-Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>