force-app/main/default/objects/Brand__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Telefone da Marca</description>
    <inlineHelpText>Insira o telefone que poderá ser utilizado em templates e outros campos vinculados.</inlineHelpText>
    <label>Telefone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>