force-app/main/default/objects/Brand__c/fields/QueueN1__c.field-meta.xml
<CustomField>
    <fullName>QueueN1__c</fullName>
    <description>O nome da Fila de N1 que essa Marca utiliza, será necessário para automação da Fila.</description>
    <inlineHelpText>O nome da Fila de N1 que essa Marca utiliza, será necessário para automação da Fila.</inlineHelpText>
    <label>Nome da Fila de N1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>