force-app/main/default/objects/Brand__c/fields/ReversaRapida__c.field-meta.xml
<CustomField>
    <fullName>ReversaRapida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que determina o fluxo de reversa rápida. O produto não espera chegar no CD para prosseguir com o fluxo financeiro.</description>
    <inlineHelpText>Campo que determina o fluxo de reversa rápida. O produto não espera chegar no CD para prosseguir com o fluxo financeiro.</inlineHelpText>
    <label>Reversa Rápida</label>
    <type>Checkbox</type>
</CustomField>