force-app/main/default/objects/Brand__c/fields/SupportEmail__c.field-meta.xml
<CustomField>
    <fullName>SupportEmail__c</fullName>
    <description>E-mail utilizado para o suporte da Marca.</description>
    <inlineHelpText>Informar o E-mail do Suporte da Marca relacionada.</inlineHelpText>
    <label>E-mail do Suporte</label>
    <type>Email</type>
</CustomField>