force-app/main/default/objects/Brand__c/fields/Tabulacao_Personalizada__c.field-meta.xml
<CustomField>
    <fullName>Tabulacao_Personalizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tabulação Personalizada</label>
    <type>Checkbox</type>
</CustomField>