force-app/main/default/objects/Brand__c/fields/TokeniHub__c.field-meta.xml
<CustomField>
    <fullName>TokeniHub__c</fullName>
    <description>Os tokens utilizados nos headers dos callouts feitos para o iHub são divididos por marca, portanto, esse campo é utilizado para armazenar o Token da Marca</description>
    <label>Token iHub</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>