force-app/main/default/objects/Brand__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Tipo do cadastro da Marca.</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipos_de_Marcas</valueSetName>
    </valueSet>
</CustomField>