force-app/main/default/objects/Brand__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>BusinessName__c</columns>
    <columns>BusinessHours__c</columns>
    <columns>SupportEmail__c</columns>
    <columns>ExternalId__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>